# game-engine

./: CMakeLists.txt  conandata.yml  conanfile.py
ai/: CMakeLists.txt
ai/src/: ai.cpp
algorithms/: CMakeLists.txt
algorithms/src/: algorithms.cpp
network/: CMakeLists.txt
rendering/: CMakeLists.txt
rendering/src/: rendering.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json
test_package/src/: example.cpp
